basic layout setup

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">Memory game</string>
+    <string name="app_name">Memory Game</string>
+    <string name="img_alt">Image Card</string>
 </resources>
