--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Memory Game</string>
-    <string name="img_alt">Image Card</string>
+    <string name="img_alt">CardBack</string>
     <string name="btn_fetch">Fetch</string>
     <string name="btn_confirm">Confirm</string>
     <string name="url_input">https://stocksnap.io/search/food</string>
