finish all basic functionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,5 @@
     <string name="btn_fetch">Fetch</string>
     <string name="btn_confirm">Confirm</string>
     <string name="url_input">https://stocksnap.io/search/food</string>
-    <string name="loading_text">Downloading 0 of 20 images...</string>
+    <string name="loading_text">Downloading 0 of 20 images…</string>
 </resources>
