add play again and fetch image button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="btn_confirm">Confirm</string>
     <string name="url_input">https://stocksnap.io/search/food</string>
     <string name="loading_text">Downloading 0 of 20 images…</string>
+    <string name="fetch_image">Fetch Images</string>
+    <string name="play_again"> Play Again </string>
+
 </resources>
