fine tune animation effects

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="url_input">https://stocksnap.io/search/food</string>
     <string name="loading_text">Downloading 0 of 20 images…</string>
     <string name="fetch_image">Fetch Images</string>
-    <string name="play_again"> Play Again </string>
-
+    <string name="play_again">Play Again</string>
+    <string name="dinosaur">Dinosaur</string>
+    <string name="congrats">Congratulations!!!</string>
 </resources>
